- footer.js: Moved footer code to new footer.js, so the footer would self-append to each page. - scrolls: removed description and source properties (redundant). - fixed getRandomCasterMetrics() - added getSpellScrollVariant() -- just adds caster metrics at base scroll level (no fancy spell level upgrades [yet?]) - suplier-settings page: added "something" to the blank page, updated notes - navbar: fixed so hamburger menu would show up on smallest screen. Also, current page is highlighted.

--- a/magic-store/magic-store.css
+++ b/magic-store/magic-store.css
@@ -3,7 +3,7 @@ body {
     font-size: 1rem;
     background-color: #f8f9fa;
     margin: 0;
-    padding: 20px;
+    padding: 5px 20px;
 }
 
 main {
@@ -118,9 +118,7 @@ button:hover {
 }
 
 #updatesTable tbody tr td:nth-last-child(1) {
-    text-align: center;
     padding: 2px;
-    
 }
 
 #updatesTable tbody tr td {
